Bug 613517 - Remove support for making links relative when pasting/dropping HTML data over an editable area; r=roc